src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>Add__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.Address_1__c &amp;&quot;,&quot;&amp; Application_ID__r.Project__r.Organization__r.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Period_End_Date__c</fullName>
        <description>NOFO - Cash Grant= “No&quot; / &quot;Optional&quot;; 
Application - Program Type = &quot;Standard&quot;
New Date field created as the new requirements. 
US # 4783.</description>
        <label>Agreement Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Period_Start_Date__c</fullName>
        <description>NOFO - Cash Grant= “No&quot; / &quot;Optional&quot;; 
Application - Program Type = &quot;Standard&quot;
New Date field created as the new requirements. 
US # 4783.</description>
        <label>Agreement Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment_Reason__c</fullName>
        <description>Reason for Amendment.</description>
        <label>Amendment Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amendment_Type__c</fullName>
        <description>Value comes from Application object.</description>
        <formula>TEXT( Application_ID__r.Option__c )</formula>
        <label>Amendment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <description>Amendment # for Amendment awards.</description>
        <label>Amendment #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Type_2__c</fullName>
        <label>App Type 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application ID related to Award.</description>
        <label>Application ID</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Type of Application coming from Application object.</description>
        <formula>if(ispickval(Application_ID__r.Type_of_Application__c, &quot;New&quot;), &quot;New&quot;, 
if(ispickval(Application_ID__r.Type_of_Application__c, &quot;Continuation&quot;), &quot;Continuation&quot;,
if(ispickval(Application_ID__r.Type_of_Application__c, &quot;Amendment&quot;), &quot;Amendment&quot;,&quot;None&quot;
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <description>This field is used for Grant #. KY</description>
        <displayFormat>{000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Awaiting_SGO_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting SGO Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Description__c</fullName>
        <description>Detailed description of Award.</description>
        <label>Award Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Award_Flow__c</fullName>
        <description>Field determines the Approval process flow. KY</description>
        <formula>IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Yes&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 1&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Optional&quot;),OR(ISPICKVAL(Application_ID__r.Program_Type__c,&quot;Support Grant&quot;),
ISPICKVAL(Application_ID__r.Program_Type__c,&quot;Program Grant&quot;)),ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 2&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Yes&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;Yes&quot;)), &quot;Flow 4&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;No&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 6-1&quot;, 

IF(AND(ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,&quot;Optional&quot;),ISPICKVAL(Application_ID__r.Program_Type__c,&quot;Standard&quot;),
ISPICKVAL(Application_ID__r.NOFA_RFP__r.Cooperative_Agreement__c, &quot;No&quot;)), &quot;Flow 6-2&quot;, &quot;&quot;)))))</formula>
        <label>Award Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Year__c</fullName>
        <description>Auto - populate the Award year.</description>
        <label>Award Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awarded_By__c</fullName>
        <label>Awarded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awarded_Date__c</fullName>
        <label>Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Being_Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a flag to verify if an Award has been previously committed. 
For SPO actions. (KY)</description>
        <label>Being Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Period_End__c</fullName>
        <description>Field related to Budget information.</description>
        <label>Grant Budget Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Period_Start__c</fullName>
        <description>Field related to Budget information.</description>
        <label>Grant Budget Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCR_Verified__c</fullName>
        <formula>Organization__r.CCR_Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCR Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Program</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_I_amend__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can I amend?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this flag when the Award is Being Committed. KY</description>
        <label>Committed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Program1__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.CNCS_Corporate_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program_Prime__c</fullName>
        <label>Corporate Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bug 3563</description>
        <label>Cost Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DHHS_Print_Mgmt_System_c__c</fullName>
        <formula>Organization__r.DHHS_Print_Mgmt_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHHS Print Mgmt System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Obligated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for Amendment Approvals. Check this checkbox when the Status changes to De-Obligated. Code is in Method.</description>
        <label>De-Obligated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demonstrates_Ethics_Integrity__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Demonstrates Ethics &amp; Integrity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Period_End_Date__c</fullName>
        <description>NOFO - Cash Grant= “Yes&quot;; 

New Date field created as the new requirements. 
US # 4785.</description>
        <label>Member Enrollment Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Period_Start_Date__c</fullName>
        <description>NOFO - Cash Grant= “Yes&quot;; 

New Date field created as the new requirements. 
US # 4785.</description>
        <label>Member Enrollment Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excluded_Party_List_On__c</fullName>
        <formula>Organization__r.Excluded_party_list_reviewed_on__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excluded Party List On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Comments__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>FAPIIS Review Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Date__c</fullName>
        <description>Req-1783. Created on 10/29/2015</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAPIIS__c</fullName>
        <formula>Organization__r.FAPIIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAPIIS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Audit_Clearinghouse__c</fullName>
        <formula>TEXT(Organization__r.Financial_Management_Capability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Audit Clearinghouse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identification_Number__c</fullName>
        <description>New field created as per new requirements from Khalid on 4.12.16.
Field is populated with Master Award - Name field.
5.4.16 - Field no longer required.</description>
        <formula>Master_Award__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Award Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Management_Capability__c</fullName>
        <formula>TEXT(Organization__r.Financial_Management_Capability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Management Capability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Prime__c</fullName>
        <label>Fiscal Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Commitment_Comments__c</fullName>
        <label>Fund Commitment Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fund_Obligation_Comments__c</fullName>
        <label>Fund Obligation Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GO_Email__c</fullName>
        <description>Grant officer email for Email Template. User Story # 1007.</description>
        <label>GO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <description>US # 2415</description>
        <formula>RIGHT(TEXT( Application_ID__r.NOFA_RFP__r.Fiscal_Yr__c ),2)+
 Application_ID__r.NOFA_RFP__r.CNCS_Corporate_Program__r.Short_Code__c</formula>
        <label>FAIN(FederalAward Identification Number)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_End_Date__c</fullName>
        <description>NOFO - Cash Grant= “Yes&quot;; 

New Date field created as the new requirements. 
US # 4784.</description>
        <label>Grant Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_End__c</fullName>
        <description>Cash Grant Award = Yes; Program Type = Program or Support</description>
        <formula>Application_ID__r.Proposed_End_Date__c</formula>
        <label>Grant Performance Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_Start_Date__c</fullName>
        <description>NOFO - Cash Grant= &quot;Yes&quot;; 

New Date field created as the new requirements. 
US # 4784.</description>
        <label>Grant Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Performance_Period_Start__c</fullName>
        <description>Cash Grant Award = Yes; Program Type = Program or Support</description>
        <formula>Application_ID__r.Proposed_Start_Date__c</formula>
        <label>Grant Performance Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Status__c</fullName>
        <label>Grant Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting GO Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting PO Certification</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SPO Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Organization e-Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting XO CSHR Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obligated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SPO Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO Obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SGO De-Obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting XO De-Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De-Obligated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPO Approval/Denial Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SPO Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Team Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Team Arrival</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <formula>CASE(  
Application_ID__r.NOFA_RFP__r.Cash_Grants_Awards__c,
 &apos;Yes&apos;,CASE(Application_ID__r.Program_Type__c, &apos;&apos;,&apos;NGA Grant&apos;,&apos;&apos;),

&apos;Optional&apos;,CASE(Application_ID__r.Program_Type__c, &apos;Support Grant&apos;,&apos;NGA Grant&apos;,&apos;Program Grant&apos;,&apos;NGA Grant&apos;,&apos;Standard&apos;,&apos;Non NGA Grant&apos;,&apos;&apos;),

&apos;No&apos;,CASE(Application_ID__r.Program_Type__c, &apos;&apos;,&apos;Non NGA Grant&apos;,&apos;&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <description>US # 2415</description>
        <label>Federal Award Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grants_Office_Comments__c</fullName>
        <description>New field</description>
        <label>Grants Office Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grants_Officer_Comments__c</fullName>
        <inlineHelpText>Please enter any comments that relate to impacts on CNCS awards.</inlineHelpText>
        <label>Grants Officer Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grants_Officer_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the checkbox to confirm that the grants officer review has been completed.</inlineHelpText>
        <label>Grants Officer Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guidestar__c</fullName>
        <formula>Organization__r.Guidestar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guidestar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Available__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Information Available ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issuing_Office__c</fullName>
        <description>New field - Should be populated from Issuing Officer field from NOFO. Used for Prime Awards.</description>
        <label>Issuing Office</label>
        <picklist>
            <picklistValues>
                <fullName>HQ(Office of Grants Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issuing_Officer__c</fullName>
        <formula>TEXT(Application_ID__r.NOFA_RFP__r.Issuing_Officer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issuing Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Grant_ID__c</fullName>
        <description>This is the legacy grant id from eSPAN. It is used for data migration.</description>
        <externalId>true</externalId>
        <label>Legacy Grant ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Award Identification Number</label>
        <referenceTo>Master_Award__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application ID of the first New Application in the cycle.</description>
        <label>Master Parent</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Award (Master Parent)</relationshipLabel>
        <relationshipName>Award1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_Status__c</fullName>
        <label>Match Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Year_Field_1__c</fullName>
        <description>Field for Match Year requirements. Not shown on Layout.</description>
        <formula>IF( Application_Type__c = &apos;New&apos;, Project_Years_Awarded_This_Award__c + 1, 0 )</formula>
        <label>Match Year Field 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_of_sub_budgets_per_application__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.Max_of_Sub_Budgets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max # of sub-budgets per application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mitigating_Circumstances__c</fullName>
        <description>Req - 1783. Created on 10/29/2015</description>
        <label>Mitigating Circumstances</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFO_RFP_Name_New__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO/RFP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO_RFP_Name_Prime__c</fullName>
        <label>NOFO/RFP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOFO_RFP_Name__c</fullName>
        <label>NOFO/ RFP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Child_Awards__c</fullName>
        <formula>Master_Award__r.Number_of_Child_Awards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Child Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obligated1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obligated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obligated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Award Approvals.</description>
        <label>Obligated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <formula>Application_ID__r.Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Legal_Name_Prime__c</fullName>
        <description>Used for Prime Awards.</description>
        <label>Organization Legal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Legal_Name__c</fullName>
        <formula>Application_ID__r.Legal_Name__c</formula>
        <label>Organization Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_re_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked through a Workflow rule when the Status changes from Awaiting PO Certification to Awaiting Organization eSignature for the first time. Field not shown on Layout. (KY)</description>
        <label>Organization re-Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Certification_Date__c</fullName>
        <description>Field to populate the date when the PO takes action on Award record.</description>
        <label>PO Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Comments__c</fullName>
        <label>Program Officer Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PO_Email__c</fullName>
        <description>Email of the Program Officer. Field to send Approval emails.</description>
        <label>PO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>Field to populate the PO Name who took action on Award record.</description>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field obsolete, Can be deleted.</description>
        <label>PO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As an internal user, I want to view and enter pertinent grant award information so that I can take actions on a grant award record.
User Story :2661</description>
        <label>Partnership Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>DDP</description>
        <formula>Application_ID__r.Project__r.Organization__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Cycle_Closed__c</fullName>
        <formula>TEXT(Organization__r.Previous_Cycle_Closed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Cycle Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prime_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prime Application</label>
        <referenceTo>Prime_Application__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program_Name__c</referenceTo>
        <relationshipLabel>Award</relationshipLabel>
        <relationshipName>Award</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Arrival_Date__c</fullName>
        <description>Project Arrival Date for any Team Assignment</description>
        <label>Project Arrival Date</label>
        <summarizedField>Team_Assignment__c.Project_Arrival_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Team_Assignment__c.Project_Arrival_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Team_Assignment__c.Award__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <description>Field name was changed from &quot;Project End Date&quot; to &quot;Agreement Period End&quot; on 9.15.15_Krishna Yama.
Cash Grant Award = No; Program Type = Standard</description>
        <formula>Application_ID__r.Proposed_End_Date__c</formula>
        <label>Agreement Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Application_ID__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <description>Field name was changed from &quot;Project Start Date&quot; to &quot;Agreement Period Start&quot; on 9.15.15_Krishna Yama.
Cash Grant Award = No; Program Type = Standard</description>
        <formula>Application_ID__r.Proposed_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Title_Prime__c</fullName>
        <label>Project Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <description>Updates Project Title Long Text from Project Object</description>
        <label>Project Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Years_Awarded_This_Award__c</fullName>
        <defaultValue>1</defaultValue>
        <description>US # 4781.</description>
        <label>Project Years Awarded This Award</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>